--- a/test/index.html
+++ b/test/index.html
@@ -15,9 +15,11 @@
       var Assert = YAHOO.util.Assert;
     </script>
 
-
     <script src="../decimal.js"></script>
+    <script src="../currency.js"></script>
+
     <script src="test1.js"></script>
+    <script src="currency_test.js"></script>
 
     <script>
       var runner = YAHOO.tool.TestRunner;
